--- a/vignettes/Rcpp-package.Rmd
+++ b/vignettes/Rcpp-package.Rmd
@@ -1,58 +1,29 @@
-% !Rnw driver = highlight::HighlightWeaveLatex()
-\documentclass[10pt]{article}
-%\VignetteIndexEntry{Rcpp-package}
-%\VignetteEngine{highlight::highlight}
-%\VignetteKeywords{Rcpp, package}
-%\VignetteDepends{Rcpp}
+---
+title: |
+       | Writing a package that uses \pkg{Rcpp} 
 
-\usepackage[USletter]{vmargin}
-\setmargrb{0.75in}{0.75in}{0.75in}{0.75in}
-\usepackage{color,alltt}
-\usepackage[authoryear,round,longnamesfirst]{natbib}
+# Use letters for affiliations
+author:
+  - name: Dirk Eddelbuettel
+    affiliation: a
+  - name: Romain Francois
+    affiliation: a
 
-\usepackage[colorlinks]{hyperref}
-\definecolor{link}{rgb}{0,0,0.3}	%% next few lines courtesy of RJournal.sty
-\hypersetup{
-    colorlinks,%
-    citecolor=link,%
-    filecolor=link,%
-    linkcolor=link,%
-    urlcolor=link
-}
+address:
+  - code: a
+    address: \url{http://dirk.eddelbuettel.com}
+  - code: b
+    address: \url{https://romain.rbind.io/}
 
-\usepackage{microtype}                     %% cf http://www.khirevich.com/latex/microtype/
-\usepackage[T1]{fontenc}		   %% cf http://www.khirevich.com/latex/font/
-\usepackage[bitstream-charter]{mathdesign} %% cf http://www.khirevich.com/latex/font/
+# For footer text
+lead_author_surname: Eddelbuettel and Francois
 
-\newcommand{\proglang}[1]{\textsf{#1}}
-\newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
-\newcommand{\code}[1]{\texttt{#1}}
-\newcommand{\rdoc}[2]{\href{http://www.rdocumentation.org/packages/#1/functions/#2}{\code{#2}}}
+# Place DOI URL or CRAN Package URL here
+doi: "https://cran.r-project.org/package=Rcpp"
 
-%% This corresponds to setting boxes=TRUE for highlight
-\newsavebox{\hlbox}
-\definecolor{hlBg}{rgb}{0.949019607843137,0.949019607843137,0.949019607843137}
-\definecolor{hlBd}{rgb}{0.9,0.9,0.9} % border
-\renewenvironment{Hchunk}{\vspace{0.5em}\noindent\begin{lrbox}{\hlbox}\begin{minipage}[b]{.9\textwidth}}%
-    {\end{minipage}\end{lrbox}\fcolorbox{hlBd}{hlBg}{\usebox{\hlbox}}\vspace{0.5em}}
-
-<<version,echo=FALSE,print=FALSE>>=
-prettyVersion <- packageDescription("Rcpp")$Version
-prettyDate <- format(Sys.Date(), "%B %e, %Y")
-require(Rcpp)
-require(highlight)
-@
-
-\author{Dirk Eddelbuettel \and Romain Fran\c{c}ois}
-\title{Writing a package that uses \pkg{Rcpp} }
-\date{\pkg{Rcpp} version \Sexpr{prettyVersion} as of \Sexpr{prettyDate}}
-
-
-\begin{document}
-\maketitle
-
-\abstract{
-  \noindent This document provides a short overview of how to use
+# Abstract
+abstract: |
+  This document provides a short overview of how to use
   \pkg{Rcpp}~\citep{CRAN:Rcpp,JSS:Rcpp,Eddelbuettel:2013:Rcpp} when writing
   an \proglang{R} package.  It shows how usage of the function
   \rdoc{Rcpp}{Rcpp.package.skeleton} which creates a complete and
@@ -60,9 +31,58 @@ require(highlight)
   directory tree created by \rdoc{Rcpp}{Rcpp.package.skeleton} are discussed
   in detail.  This document thereby complements the \textsl{Writing R
     Extensions} manual~\citep{R:Extensions} which is the authoritative source
-  on how to extend \proglang{R} in general.  }
+  on how to extend \proglang{R} in general.
 
-\section{Introduction}
+# Optional: Acknowledgements
+# acknowledgements: |
+
+# Optional: One or more keywords
+keywords:
+  - Rcpp
+  - package
+  - r
+  - cpp
+
+# Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
+fontsize: 9pt
+
+# Optional: Force one-column layout, default is two-column
+#one_column: true
+
+# Optional: Enables lineo mode, but only if one_column mode is also true
+#lineno: true
+
+# Optional: Enable one-sided layout, default is two-sided
+#one_sided: true
+
+# Optional: Bibliography
+bibliography: Rcpp
+
+# Optional: Enable a 'Draft' watermark on the document
+#watermark: false
+
+# Customize footer, eg by referencing the vignette
+footer_contents: "Rcpp Vignette"
+
+# Our style
+output: pinp::pinp
+
+header-includes:
+  \newcommand{\proglang}[1]{\textsf{#1}}
+  \newcommand{\pkg}[1]{\textbf{#1}}
+  \newcommand{\faq}[1]{FAQ~\ref{#1}}
+  \newcommand{\rdoc}[2]{\href{http://www.rdocumentation.org/packages/#1/functions/#2}{\code{#2}}}
+  \newcommand{\sugar}{\textsl{Rcpp sugar}~}
+
+vignette: >
+  %\VignetteIndexEntry{Rcpp-package}
+  %\VignetteKeywords{Rcpp, package, r, cpp}
+  %\VignettePackage{Rcpp}
+  %\VignetteEngine{knitr::rmarkdown}
+---
+
+
+# Introduction
 
 \pkg{Rcpp}~\citep{CRAN:Rcpp,JSS:Rcpp,Eddelbuettel:2013:Rcpp} is an extension
 package for \proglang{R} which offers an easy-to-use yet featureful interface
@@ -73,7 +93,7 @@ from a traditional \proglang{R} package because its key component is a
 
 It should be noted that \proglang{R} has only limited support for
 \proglang{C(++)}-level dependencies between packages~\citep{R:Extensions}. The
-\texttt{LinkingTo} declaration in the package \texttt{DESCRIPTION} file
+`LinkingTo` declaration in the package `DESCRIPTION` file
 allows the client package to retrieve the headers of the target package (here
 \pkg{Rcpp}), but support for linking against a library is not provided by
 \proglang{R} and has to be added manually.
@@ -90,9 +110,9 @@ a basic understanding of how to create \proglang{R} package, the present
 document aims to provide the additional information on how to use \pkg{Rcpp}
 in such add-on packages.
 
-\section{Using \texttt{Rcpp.package.skeleton}}
+# Using `Rcpp.package.skeleton`
 
-\subsection{Overview}
+## Overview
 
 \pkg{Rcpp} provides a function \rdoc{Rcpp}{Rcpp.package.skeleton}, modeled
 after the base \proglang{R} function \rdoc{utils}{package.skeleton}, which
@@ -102,13 +122,13 @@ facilitates creation of a skeleton package using \pkg{Rcpp}.
 its help page (and similar to those of \rdoc{utils}{package.skeleton}). The
 main argument is the first one which provides the name of the package one
 aims to create by invoking the function.  An illustration of a call using an
-argument \texttt{mypackage} is provided below.
+argument `mypackage` is provided below.
 
-<<tree,eval=FALSE>>=
+```{r, generate-skeleton, eval=FALSE}
 Rcpp.package.skeleton("mypackage")
-@
-\begin{Hchunk}
-\begin{verbatim}
+```
+
+```
 $ ls -1R mypackage/
 DESCRIPTION
 NAMESPACE
@@ -130,24 +150,19 @@ Makevars.win        ## up until Rcpp 0.10.6, see below
 RcppExports.cpp
 rcpp_hello_world.cpp
 $
-\end{verbatim}
-\end{Hchunk}
+```
 
 Using \rdoc{Rcpp}{Rcpp.package.skeleton} is by far the simplest approach
 as it fulfills two roles. It creates the complete set of files needed for a
 package, and it also includes the different components needed for using
 \pkg{Rcpp} that we discuss in the following sections.
 
-\subsection{\proglang{C++} code}
+## \proglang{C++} code
 
-If the \texttt{attributes} argument is set to
-\texttt{TRUE}\footnote{Setting \texttt{attributes} to \texttt{TRUE} is the default. This document
-does not cover the behavior of \texttt{Rcpp.package.skeleton} when \texttt{attributes} is set
-to \texttt{FALSE} as we try to encourage package developpers to use
-attributes. },
-the following \proglang{C++} file is included in the \texttt{src/} directory:
+If the `attributes` argument is set to `TRUE`[^1], the 
+following \proglang{C++} file is included in the `src/` directory:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 #include <Rcpp.h>
 using namespace Rcpp;
 
@@ -160,19 +175,19 @@ List rcpp_hello_world() {
 
     return z ;
 }
-@
+```
 
-The file defines the simple \texttt{rcpp\_hello\_world} function that
-uses a few \pkg{Rcpp} classes and returns a \texttt{List}.
+The file defines the simple `rcpp_hello_world` function that
+uses a few \pkg{Rcpp} classes and returns a `List`.
 
-This function is preceded by the \texttt{Rcpp::export} attribute to automatically
+This function is preceded by the `Rcpp::export` attribute to automatically
 handle argument conversion because \proglang{R} has to be taught how to
-e.g. handle the \texttt{List} class.
+e.g. handle the `List` class.
 
 \rdoc{Rcpp}{Rcpp.package.skeleton} then invokes \rdoc{Rcpp}{compileAttributes}
-on the package, which generates the \texttt{RcppExports.cpp} file:
+on the package, which generates the `RcppExports.cpp` file:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
@@ -190,7 +205,7 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
-@
+```
 
 This file defines a function with the appropriate calling convention, suitable for
 \rdoc{base}{.Call}. It needs to be regenerated each time functions
@@ -199,30 +214,29 @@ exposed by attributes are modified. This is the task of the
 beyond the scope of this document and more information is available
 in the attributes vignette \citep{CRAN:Rcpp:Attributes}.
 
-\subsection{\proglang{R} code}
+## \proglang{R} code
 
 The \rdoc{Rcpp}{compileAttributes} also generates \proglang{R} code
 that uses the \proglang{C++} function.
 
-<<lang=cpp>>=
+```{r, eval = FALSE}
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 rcpp_hello_world <- function() {
     .Call('mypackage_rcpp_hello_world', PACKAGE = 'mypackage')
 }
-@
+```
 
 This is also a generated file so it should not be modified manually, rather
 regenerated as needed by \rdoc{Rcpp}{compileAttributes}.
 
-\subsection{\texttt{DESCRIPTION}}
+## `DESCRIPTION`
 
-The skeleton generates an appropriate \texttt{DESCRIPTION} file, using
-both \texttt{Imports:} and \texttt{LinkingTo} for \pkg{Rcpp}:
+The skeleton generates an appropriate `DESCRIPTION` file, using
+both `Imports:` and `LinkingTo` for \pkg{Rcpp}:
 
-\begin{Hchunk}
-\begin{verbatim}
+```
 Package: mypackage
 Type: Package
 Title: What the package does (short line)
@@ -234,19 +248,18 @@ Description: More about what it does (maybe more than one line)
 License: What Licence is it under ?
 Imports: Rcpp (>= 0.11.0)
 LinkingTo: Rcpp
-\end{verbatim}
-\end{Hchunk}
+```
 
 \rdoc{Rcpp}{Rcpp.package.skeleton} adds the three last lines to the
-\texttt{DESCRIPTION} file generated by \rdoc{utils}{package.skeleton}.
+`DESCRIPTION` file generated by \rdoc{utils}{package.skeleton}.
 
-The \texttt{Imports} declaration indicates \proglang{R}-level dependency
+The `Imports` declaration indicates \proglang{R}-level dependency
 between the client package and \pkg{Rcpp}; code from the latter is being
-imported into the package described here. The \texttt{LinkingTo} declaration
+imported into the package described here. The `LinkingTo` declaration
 indicates that the client package needs to use header files exposed by
 \pkg{Rcpp}.
 
-\subsection{Now optional: \texttt{Makevars} and \texttt{Makevars.win}}
+## Now optional: `Makevars` and `Makevars.win`
 
 This behaviour changed with \pkg{Rcpp} release 0.11.0. These files used to be
 mandatory, now they are merely optional. 
@@ -254,18 +267,17 @@ mandatory, now they are merely optional.
 We will describe the old setting first as it was in use for a few years. The
 new standard, however, is much easier and is described below.
 
-\subsubsection{Releases up until 0.10.6}
+## Releases up until 0.10.6
 
-Unfortunately, the \texttt{LinkingTo} declaration in itself was not
+Unfortunately, the `LinkingTo` declaration in itself was not
 enough to link to the user \proglang{C++} library of \pkg{Rcpp}. Until more
 explicit support for libraries is added to \proglang{R}, ones needes to manually
-add the \pkg{Rcpp} library to the \texttt{PKG\_LIBS} variable in the
-\texttt{Makevars} and \texttt{Makevars.win} files. (This has now changed with
+add the \pkg{Rcpp} library to the `PKG_LIBS` variable in the
+`Makevars` and `Makevars.win` files. (This has now changed with
 release 0.11.0; see below).
-\pkg{Rcpp} provides the unexported function \texttt{Rcpp:::LdFlags()} to ease the process:
+\pkg{Rcpp} provides the unexported function `Rcpp:::LdFlags()` to ease the process:
 
-\begin{Hchunk}
-\begin{verbatim}
+```
 ## Use the R_HOME indirection to support installations of multiple R version
 PKG_LIBS = `$(R_HOME)/bin/Rscript -e "Rcpp:::LdFlags()"`
 
@@ -291,42 +303,37 @@ PKG_LIBS = `$(R_HOME)/bin/Rscript -e "Rcpp:::LdFlags()"`
 ## Of course, autoconf can also be used to write configure files. This is
 ## done by a number of packages, but recommended only for more advanced users
 ## comfortable with autoconf and its related tools.
-\end{verbatim}
-\end{Hchunk}
+```
 
 
-The \texttt{Makevars.win} is the equivalent, targeting windows.
+The `Makevars.win` is the equivalent, targeting windows.
 
-\begin{Hchunk}
-\begin{verbatim}
+```
 ## Use the R_HOME indirection to support installations of multiple R version
 PKG_LIBS = $(shell "${R_HOME}/bin${R_ARCH_BIN}/Rscript.exe" -e "Rcpp:::LdFlags()")
-\end{verbatim}
-\end{Hchunk}
+```
 
-\subsubsection{Releases since 0.11.0}
+## Releases since 0.11.0
 
 As of release 0.11.0, this is no longer needed as client packages obtain the
 required code from \pkg{Rcpp} via explicit function registration. The user
 does not have to do anything.  
 
-This means that \code{PKG\_LIBS} can now be empty---unless some client
+This means that `PKG_LIBS` can now be empty---unless some client
 libraries are needed.  For example, \pkg{RcppCNPy} needs compression support
-and hence uses \code{PKG\_LIBS= -lz}. Similarly, when a third-party library is
+and hence uses `PKG_LIBS= -lz`. Similarly, when a third-party library is
 required, it can and should be set here.
 
-\subsection{\texttt{NAMESPACE}}
+## `NAMESPACE`
 
 The \rdoc{Rcpp}{Rcpp.package.skeleton} function also creates a file
-\texttt{NAMESPACE}.
+`NAMESPACE`.
 
-\begin{Hchunk}
-\begin{verbatim}
+```{bash, eval = FALSE}
 useDynLib(mypackage)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
-\end{verbatim}
-\end{Hchunk}
+```
 
 This file serves three purposes. First, it ensure that the dynamic library
 contained in the package we are creating via
@@ -337,26 +344,25 @@ Second, it declares which functions should be globally visible from the
 namespace of this package. As a reasonable default, we export all functions.
 
 Third, it instructs R to import a symbol from \pkg{Rcpp}. This sets up the
-import of all registered function and, together with the \code{Imports:}
-statement in \code{DESCRIPTION}, provides what is needed for client packages
+import of all registered function and, together with the `Imports:`
+statement in `DESCRIPTION`, provides what is needed for client packages
 to access \pkg{Rcpp} functionality.
 
-\subsection{Help files}
+## Help files
 
-Also created is a directory \texttt{man} containing two help files. One is
+Also created is a directory `man` containing two help files. One is
 for the package itself, the other for the (single) \proglang{R} function
 being provided and exported.
 
 The \textsl{Writing R Extensions} manual~\citep{R:Extensions} provides the complete
 documentation on how to create suitable content for help files.
 
-\subsubsection{\texttt{mypackage-package.Rd}}
+## `mypackage-package.Rd`
 
-The help file \texttt{mypackage-package.Rd} can be used to describe
+The help file `mypackage-package.Rd` can be used to describe
 the new package.
 
-\begin{Hchunk}
-\begin{verbatim}
+```{bash, eval = FALSE}
 \name{mypackage-package}
 \alias{mypackage-package}
 \alias{mypackage}
@@ -395,16 +401,14 @@ Maintainer: Who to complain to <yourfault@somewhere.net>
 \examples{
 %% ~~ simple examples of the most important functions ~~
 }
-\end{verbatim}
-\end{Hchunk}
+```
 
-\subsubsection{\texttt{rcpp\_hello\_world.Rd}}
+## `rcpp_hello_world.Rd`
 
-The help file \texttt{rcpp\_hello\_world.Rd} serves as documentation for the
+The help file `rcpp_hello_world.Rd` serves as documentation for the
 example \proglang{R} function.
 
-\begin{Hchunk}
-\begin{verbatim}
+```
 \name{rcpp_hello_world}
 \alias{rcpp_hello_world}
 \docType{package}
@@ -422,16 +426,15 @@ rcpp_hello_world()
 rcpp_hello_world()
 }
 }
-\end{verbatim}
-\end{Hchunk}
+```
 
-\section{Using modules}
+# Using modules
 
-This document does not cover the use of the \texttt{module} argument
+This document does not cover the use of the `module` argument
 of \rdoc{Rcpp}{Rcpp.package.skeleton}. It is covered
 in the modules vignette \citep{CRAN:Rcpp:Modules}.
 
-\section{Further examples}
+# Further examples
 
 The canonical example of a package that uses \pkg{Rcpp} is the
 \pkg{RcppExamples} \citep{CRAN:RcppExamples} package. \pkg{RcppExamples}
@@ -444,10 +447,10 @@ and \pkg{minqa} \citep{CRAN:minqa}. Several other packages follow older (but sti
 and appropriate) instructions. They can serve examples on how to get data to
 and from \proglang{C++} routines, but should not be considered templates for
 how to connect to \pkg{Rcpp}. The full list of packages using \pkg{Rcpp} can
-be found at the \href{http://CRAN.R-project.org/package=Rcpp}{CRAN page} of
+be found at the [CRAN page](http://CRAN.R-project.org/package=Rcpp) of
 \pkg{Rcpp}.
 
-\section{Other compilers}
+# Other compilers
 
 Less experienced \proglang{R} users on the Windows platform frequently ask
 about using \pkg{Rcpp} with the Visual Studio toolchain.  That is simply not
@@ -462,15 +465,14 @@ attempt at claiming otherwise.
 toolchain for \proglang{R} is used. See the \textsl{Writing R Extensions}
 manual~\citep{R:Extensions} for details.
 
-\section{Summary}
+# Summary
 
 This document described how to use the \pkg{Rcpp} package for \proglang{R}
 and \proglang{C++} integration when writing an \proglang{R} extension
 package. The use of the \rdoc{Rcpp}{Rcpp.package.skeleton} was shown in
 detail, and references to further examples were provided.
 
-\bibliographystyle{plainnat}
-\bibliography{\Sexpr{Rcpp:::bib()}}
-
-\end{document}
-
+[^1]: Setting `attributes` to `TRUE` is the default. This document
+    does not cover the behavior of `Rcpp.package.skeleton` when `attributes` is set
+    to `FALSE` as we try to encourage package developpers to use
+    attributes. 
